fielo/force-app/main/default/objects/Monkey_Banana__c/Monkey_Banana__c.object-meta.xml
<CustomObject>
    <label>Monkey Banana</label>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>Monkey Banana Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Monkey Bananas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>