fielo/force-app/main/default/objects/Monkey_Banana__c/fields/BestResult__c.field-meta.xml
<CustomField>
    <fullName>BestResult__c</fullName>
    <label>Best Result</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>