fielo/force-app/main/default/objects/Monkey_Banana__c/fields/Matrix__c.field-meta.xml
<CustomField>
    <fullName>Matrix__c</fullName>
    <label>Matrix</label>
    <type>TextArea</type>
</CustomField>