fielo/force-app/main/default/objects/Monkey_Banana__c/fields/numberLine__c.field-meta.xml
<CustomField>
    <fullName>numberLine__c</fullName>
    <label>Number Line</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>