fielo/force-app/main/default/objects/Monkey_Banana__c/fields/numberRow__c.field-meta.xml
<CustomField>
    <fullName>numberRow__c</fullName>
    <label>Number Row</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>